@@ -146,6 +146,7 @@
 		<script src="js/popup/inject.js"></script>
 		<script src="js/popup/options.js"></script>
 		<script src="js/popup/cobj.js"></script>
+		<script src="js/popup/events.js"></script>
 		<script src="js/popup/vcl/init.js"></script>
 		<script src="js/popup/vcl/Suggest.js"></script>
 		<script src="js/popup/vcl/TweetEditor.js"></script>
